# routes/contacts.js
@@ -1,22 +1,25 @@
 /* eslint-disable no-undef */
 const express = require("express");
 const router = express.Router();
+const validate = require("../utilities/contactValidation");
+
 
 const contactsController = require("../controllers/contactsController");
 
 // #swagger.tags = ['Contacts']
 // #swagger.description = 'Get all contacts'
-router.get("/contacts", contactsController.getAllcontacts);
+router.get("/contacts", contactsController.getAllContacts);
+
 
 router.get("/contacts/:id", contactsController.getcontactById);
 
 // #swagger.tags = ['Contacts']
 // #swagger.description = 'Create a new contact'
-router.post("/contacts/", contactsController.createContact);
+router.post("/contacts/", validate.saveContact, contactsController.createContact);
 
 // #swagger.tags = ['Contacts']
 // #swagger.description = 'Update an existing contact'
-router.put("/contacts/:id", contactsController.updateContact);
+router.put("/contacts/:id", validate.saveContact, contactsController.updateContact);
 
 // #swagger.tags = ['Contacts']
 // #swagger.description = 'Delete a contact by ID'
